examples/test/testpolicy2295.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2295
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key49: value27
      key47: value13
      key7: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value9
      podSelector:
        matchLabels:
          key17: value11
          key24: value14
